# mai_fa_lab

./: .gitignore  README.md
lab1/: a.out
lab1/include/: functions.h
lab1/src/: functions.c  main.c
lab1/test/: test.sh
lab2/: CMakeLists.txt
lab2/src/: main.c  prime.c
lab3/: CMakeLists.txt
pack1/lab1/include/: functions.h
pack1/lab1/src/: functions.c  main.c
pack1/lab1/test/: test.sh
pack1/lab2/: CMakeLists.txt
pack1/lab2/include/: prime.h
pack1/lab2/src/: main.c  prime.c
pack1/lab2/test/: test.sh
pack1/lab3/include/: functions.h
pack1/lab3/src/: functions.c  main.c
pack2/lab1/include/: checkFR.h
pack2/lab1/src/: main.c  variable_num_of_args.c
pack2/lab2/: CMakeLists.txt
pack2/lab2/include/: functions.h
pack2/lab2/src/: functions.c  main.c
pack2/lab3/: CMakeLists.txt
pack2/lab3/include/: functions.h  newprintf.h
pack2/lab3/src/: main.c  newprintf.c  newprintf.h
pack3/lab1/: CMakeLists.txt
pack3/lab1/include/: fromDecimal.h
pack3/lab1/src/: fromDecimal.c  main.c
pack3/lab2/: CMakeLists.txt
pack3/lab2/include/: myVector.h  myVectorStr.h
pack3/lab2/src/: main.c  mainStr.c  myVector.c  myVectorStr.c
pack3/lab6/: CMakeLists.txt
pack3/lab6/include/: checkBrackets.h
pack3/lab6/src/: checkBrackets.c  main.c
